# tgraph-bot-rs

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Makefile  README.md  config.example.toml  rust-toolchain.toml  tarpaulin.toml
.cursor/rules/: rust-rules.mdc
.github/workflows/: ci.yml
.taskmaster/reports/: task-complexity-report.json
coverage/: tarpaulin-report.html
crates/tgraph-bot/: Cargo.toml
crates/tgraph-bot/src/: bot.rs  error.rs  lib.rs  main.rs
crates/tgraph-bot/tests/: integration_test.rs
crates/tgraph-commands/: Cargo.toml
crates/tgraph-commands/src/: about.rs  commands.rs  config.rs  framework.rs  lib.rs  my_stats.rs  update_graphs.rs  uptime.rs
crates/tgraph-commands/tests/: integration_test.rs
crates/tgraph-common/: Cargo.toml
crates/tgraph-common/src/: lib.rs  test_utils.rs  types.rs  utils.rs
crates/tgraph-common/tests/: integration_test.rs  types_test.rs  utils_test.proptest-regressions  utils_test.rs
crates/tgraph-config/: Cargo.toml
crates/tgraph-config/src/: cache.rs  defaults.rs  lib.rs  loader.rs  schema.rs  validator.rs
crates/tgraph-config/tests/: integration_test.rs
crates/tgraph-graphs/: Cargo.toml
crates/tgraph-graphs/src/: daily_play_count.rs  data_fetcher.rs  lib.rs  manager.rs  play_count_by_dayofweek.rs  play_count_by_hourofday.rs  play_count_by_month.rs  top_10_platforms.rs  top_10_users.rs  traits.rs  user_manager.rs  utils.rs
crates/tgraph-graphs/tests/: integration_test.rs
crates/tgraph-i18n/: Cargo.toml
crates/tgraph-i18n/src/: lib.rs  loader.rs  messages.rs
crates/tgraph-i18n/tests/: integration_test.rs
docs/: PRIVACY.md  development_plan.md  project_overview.md  testing_strategy.md
locales/de/: main.ftl
locales/en/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
scripts/: PRD.txt  setup-dev.sh  validate_locales.py
tgraph-bot/: Cargo.toml
tgraph-bot/src/: admin_api.rs  alerting.rs  discord.rs  lib.rs  main.rs  metrics.rs  monitoring_system.rs  persistence.rs  schedule_config.rs  scheduler.rs  scheduling_integration.rs  task_manager.rs  task_queue.rs  timezone_support.rs
tgraph-commands/: Cargo.toml
tgraph-commands/src/: admin.rs  audit.rs  context.rs  cooldown.rs  database.rs  dm_throttle.rs  graph.rs  lib.rs  metrics.rs  permissions.rs  registry.rs  statistics.rs  user.rs
tgraph-common/: Cargo.toml
tgraph-common/src/: error.rs  lib.rs  logging.rs  macros.rs  tautulli.rs  types.rs  utils.rs
tgraph-config/: Cargo.toml
tgraph-config/src/: lib.rs  loader.rs  manager.rs  settings.rs  validation.rs
tgraph-graphs/: Cargo.toml
tgraph-graphs/examples/: async_pipeline_example.rs  configuration_example.rs
tgraph-graphs/src/: aggregator.rs  cache.rs  cached_aggregator.rs  comparison.rs  config.rs  config_builder.rs  daily_play_count.rs  day_of_week.rs  generator.rs  hourly_distribution.rs  lib.rs  monthly_trends.rs  pipeline.rs  renderer.rs  time_range_selector.rs  top_platforms.rs  trend_analysis.rs  types.rs
tgraph-i18n/: Cargo.toml  build.rs
tgraph-i18n/examples/: context_aware_demo.rs
tgraph-i18n/src/: bundle.rs  context.rs  error.rs  lib.rs  locale.rs  manager.rs  pluralization.rs  resource.rs
tgraph-i18n/tests/: build_validation_test.rs  context_aware_test.rs  integration_tests.rs  message_completeness_test.rs
