[workspace]
resolver = "2"
members = [
    "crates/tgraph-bot",
    "crates/tgraph-commands",
    "crates/tgraph-config",
    "crates/tgraph-graphs",
    "crates/tgraph-i18n",
    "crates/tgraph-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["engels74 <engels74@tuta.io>"]
license = "MIT"
repository = "https://github.com/engels74/tgraph-bot-rs"
homepage = "https://github.com/engels74/tgraph-bot-rs"
description = "High-performance Discord bot for automated Tautulli graph generation and posting"
keywords = ["discord", "bot", "tautulli", "plex", "graphs"]
categories = ["command-line-utilities", "web-programming"]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Discord bot framework
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "standard_framework",
    "voice",
] }

# HTTP client and web utilities
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
eyre = "0.6"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Graph generation and plotting
plotters = { version = "0.3", features = ["bitmap_backend", "ttf"] }
plotters-bitmap = "0.3"
image = "0.24"

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"

# Concurrency and synchronization
arc-swap = "1.6"
parking_lot = "0.12"
dashmap = "5.5"

# Caching and rate limiting
moka = { version = "0.12", features = ["future"] }
governor = "0.6"

# File system and I/O
notify = "6.1"
tempfile = "3.8"

# Testing and development
tarpaulin = "0.27"
async-trait = "0.1"
mockall = "0.12"
insta = "1.34"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
lazy_static = "1.4"

# Development and testing dependencies (moved to individual crates)
# Note: These are defined in individual crate Cargo.toml files
# because workspace.dev-dependencies has limitations

# Profile configurations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
