[workspace]
members = [
    "tgraph-bot",
    "tgraph-commands", 
    "tgraph-config",
    "tgraph-graphs",
    "tgraph-i18n",
    "tgraph-common",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["engels74"]
license = "Apache-2.0"
repository = "https://github.com/engels74/tgraph-bot-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discord bot framework
poise = "0.6"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }

# Plotting and visualization
plotters = { version = "0.3", features = ["all_series", "all_elements", "bitmap_backend"] }

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"
unic-langid = "0.9"

# Configuration
toml = "0.8"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }

# HTTP client for potential external APIs
reqwest = { version = "0.11", features = ["json"] }

# Testing utilities
tokio-test = "0.4" 