[package]
name = "tgraph-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities and types for TGraph Telegram bot"

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
toml = { workspace = true }
config = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Rate limiting
governor = "0.6"

# Retry logic
tokio-retry = "0.3"

# Async runtime
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true } 