[package]
name = "tgraph-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for TGraph Telegram bot"

[dependencies]
# Common utilities
tgraph-common = { path = "../tgraph-common" }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true } 