[package]
name = "tgraph-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for TGraph Telegram bot"

[dependencies]
# Common utilities
tgraph-common = { path = "../tgraph-common" }

# Configuration
config = { workspace = true }
toml = { workspace = true }
serde_yaml = "0.9"

# Validation
validator = { version = "0.16", features = ["derive"] }

# File watching
notify = "6.0"

# Async utilities
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Cron parsing
cron = "0.12"

# URL parsing
url = "2.4"

# Regex
regex = "1.10"

[dev-dependencies]
tokio-test = { workspace = true } 