[package]
name = "tgraph-graphs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph generation and visualization for TGraph Telegram bot"

[dependencies]
# Common utilities
tgraph-common = { path = "../tgraph-common", features = ["plotters"] }

# Plotting and visualization
plotters = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8" 