[package]
name = "tgraph-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tgraph-bot"
path = "src/main.rs"

[dependencies]
# Workspace crates
tgraph-commands = { path = "../tgraph-commands" }
tgraph-config = { path = "../tgraph-config" }
tgraph-graphs = { path = "../tgraph-graphs" }
tgraph-i18n = { path = "../tgraph-i18n" }
tgraph-common = { path = "../tgraph-common" }

# External dependencies from workspace
tokio = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
tgraph-common = { path = "../tgraph-common", features = ["testing"] }

# Benchmarks will be added later
# [[bench]]
# name = "bot_performance"
# harness = false

[features]
default = []
testing = ["tgraph-common/testing"]
