[package]
name = "tgraph-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types, utilities, and common functionality for TGraph Bot"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tgraph_common"
path = "src/lib.rs"

[dependencies]
# External dependencies from workspace
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmarks will be added later
# [[bench]]
# name = "common_performance"
# harness = false
