[package]
name = "tgraph-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types, utilities, and common functionality for TGraph Bot"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tgraph_common"
path = "src/lib.rs"

[dependencies]
# External dependencies from workspace
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

# Property testing (conditional)
proptest = { version = "1.4", optional = true }

# Test utilities dependencies (conditional)
tempfile = { version = "3.8", optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
testing = ["tempfile", "tracing-subscriber", "serde_yaml", "proptest"]

# Benchmarks will be added later
# [[bench]]
# name = "common_performance"
# harness = false
