[package]
name = "tgraph-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Type-safe configuration management with hot-reloading for TGraph Bot"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tgraph_config"
path = "src/lib.rs"

[dependencies]
# Workspace crates
tgraph-common = { path = "../tgraph-common" }

# External dependencies from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

# Benchmarks will be added later
# [[bench]]
# name = "config_performance"
# harness = false
