[package]
name = "tgraph-graphs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance graph generation and rendering for Tautulli data visualization"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tgraph_graphs"
path = "src/lib.rs"

[dependencies]
# Workspace crates
tgraph-config = { path = "../tgraph-config" }
tgraph-i18n = { path = "../tgraph-i18n" }
tgraph-common = { path = "../tgraph-common" }

# External dependencies from workspace
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
plotters = { workspace = true }
plotters-bitmap = { workspace = true }
image = { workspace = true }
moka = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"

# Benchmarks will be added later
# [[bench]]
# name = "graph_performance"
# harness = false
