[package]
name = "tgraph-i18n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internationalization support using Fluent localization system for TGraph Bot"
keywords.workspace = true
categories.workspace = true

[lib]
name = "tgraph_i18n"
path = "src/lib.rs"

[dependencies]
# Workspace crates
tgraph-common = { path = "../tgraph-common" }

# External dependencies from workspace
tokio = { workspace = true }
fluent = { workspace = true }
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tgraph-common = { path = "../tgraph-common", features = ["testing"] }

[features]
default = []
testing = ["tgraph-common/testing"]

[build-dependencies]
fluent-syntax = { workspace = true }

# Benchmarks will be added later
# [[bench]]
# name = "i18n_performance"
# harness = false
